<resources>
    <string name="app_name">ExtractionKotlinApp</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="default_image_size">Default Image Size:</string>
    <string name="enter_save_path">Enter save path</string>
    <string name="save_settings">Save Settings</string>
    <string name="save_location">Save Location:</string>
</resources>